--- a/ui/rsc-ui/rsc.qrc
+++ b/ui/rsc-ui/rsc.qrc
@@ -11,5 +11,8 @@
         <file>fonts/DIN.otf</file>
         <file alias="logo">icons/logo.png</file>
         <file>style/style.css</file>
+        <file>icons/menu-tri.png</file>
+        <file>icons/dock-a.png</file>
+        <file>icons/dock-b.png</file>
     </qresource>
 </RCC>
