--- a/ui/rsc-ui/style/style.css
+++ b/ui/rsc-ui/style/style.css
@@ -135,4 +135,16 @@ QTabWidget QTabBar::tab {
     min-width: 250px;
     min-height: 50px; }
 
+#OperatorUi {
+  border: 2px solid #27272B;
+  margin: 10px;
+  padding: 10px; }
+
+CustomDial {
+  background-color: #27272B;
+  font-size: 18px;
+  font-family: DIN;
+  color: #FFFFFF;
+  qproperty-arc: #43D4B4; }
+
 /*# sourceMappingURL=style.css.map */
