--- a/ui/rsc-ui/style/style.sass
+++ b/ui/rsc-ui/style/style.sass
@@ -164,13 +164,24 @@ QTabWidget
 #OperatorUi
 
   border: 2px solid $black
-  margin: 10px
-  padding: 10px
+  margin: 5px
+  padding: 5px
 
 CustomDial
 
-  background-color: $black
-  font-size: 18px
+  background-color: transparent
+  font-size: 20px
   font-family: DIN
-  color: $white
-  qproperty-arc: $turquoise
+  color: $black
+  qproperty-arc: $black
+
+ModDockItem
+
+  background-color: $red
+  qproperty-borderColor: $black
+  qproperty-borderWidth: 4
+  color: $black
+  font-family: DIN
+  font-size: 20px
+  margin: 20px
+  padding: 20px
