--- a/ui/rsc-ui/style/style.sass
+++ b/ui/rsc-ui/style/style.sass
@@ -212,7 +212,7 @@ CustomDial
   color: $black
   qproperty-arc: $black
 
-ModDockItem
+ModUnitUi
 
   background-color: $red
   qproperty-borderColor: $black
