--- a/ui/rsc-ui/style/style.css
+++ b/ui/rsc-ui/style/style.css
@@ -173,7 +173,7 @@ CustomDial {
   color: #27272B;
   qproperty-arc: #27272B; }
 
-ModUnitUi {
+ModItemUi {
   background-color: #DC4850;
   qproperty-borderColor: #27272B;
   qproperty-borderWidth: 4;
