--- a/ui/rsc-ui/style/style.css
+++ b/ui/rsc-ui/style/style.css
@@ -171,15 +171,16 @@ QTabWidget QTabBar::tab {
 
 CustomDial {
   background-color: transparent;
-  font-size: 18px;
+  font-size: 14px;
   font-family: DIN;
   color: #27272B;
-  qproperty-arcColor: #27272B;
+  qproperty-arcColor: #FFFFFF;
   qproperty-arcWidth: 3;
-  min-width: 100px;
-  max-width: 100px;
-  min-height: 100px;
-  max-height: 100px; }
+  qproperty-arcPadding: 4;
+  min-width: 110;
+  max-width: 110;
+  min-height: 110;
+  max-height: 110; }
 
 ModItemUi {
   background-color: #DC4850;
