--- a/ui/rsc-ui/style/style.sass
+++ b/ui/rsc-ui/style/style.sass
@@ -210,15 +210,16 @@ QTabWidget
 CustomDial
 
   background-color: transparent
-  font-size: 18px
+  font-size: 14px
   font-family: DIN
   color: $black
-  qproperty-arcColor: $black
+  qproperty-arcColor: $white
   qproperty-arcWidth: 3
-  min-width: 100px
-  max-width: 100px
-  min-height: 100px
-  max-height: 100px
+  qproperty-arcPadding: 4
+  min-width: 110
+  max-width: 110
+  min-height: 110
+  max-height: 110
 
 ModItemUi
 
