--- a/ui/rsc-ui/style/style.sass
+++ b/ui/rsc-ui/style/style.sass
@@ -209,17 +209,20 @@ QTabWidget
 
 CustomDial
 
+  $side: 115
+
   background-color: transparent
   font-size: 14px
   font-family: DIN
   color: $black
   qproperty-arcColor: $white
   qproperty-arcWidth: 3
-  qproperty-arcPadding: 4
-  min-width: 110
-  max-width: 110
-  min-height: 110
-  max-height: 110
+  qproperty-arcPadding: 3.5
+  qproperty-valueShown: true
+  min-width: $side
+  max-width: $side
+  min-height: $side
+  max-height: $side
 
 ModItemUi
 
