--- a/ui/rsc-ui/style/style.css
+++ b/ui/rsc-ui/style/style.css
@@ -1,11 +1,11 @@
-QMainWindow {
+AnthemUi {
   background-color: #27272B;
   min-width: 1020px;
   min-height: 680px; }
 
 QLabel {
   qproperty-alignment: AlignCenter;
-  color: #FFFFFF; }
+  color: #F7FDFA; }
 
 Menubar {
   max-height: 80px; }
@@ -143,7 +143,7 @@ QTabWidget::pane {
 QTabWidget QTabBar::tab {
   background-color: #27272B;
   font-size: 30px;
-  color: #FFFFFF;
+  color: #F7FDFA;
   font-family: "DIN Light";
   border: none;
   outline: none;
@@ -164,24 +164,26 @@ QTabWidget QTabBar::tab {
     min-height: 50px;
     padding-top: 5px; }
 
-#OperatorUi {
+OperatorUi {
   border: 2px solid #27272B;
-  margin: 5px;
-  padding: 5px; }
+  margin: 5px; }
 
-CustomDial {
+ModDial {
   background-color: transparent;
   font-size: 14px;
   font-family: DIN;
   color: #27272B;
-  qproperty-arcColor: #FFFFFF;
+  qproperty-arcColor: #27272B;
   qproperty-arcWidth: 3;
-  qproperty-arcPadding: 3.5;
-  qproperty-valueShown: true;
+  qproperty-arcPadding: 4;
+  qproperty-valueShown: false;
+  qproperty-displayedArcColor: #F7FDFA;
   min-width: 115;
-  max-width: 115;
-  min-height: 115;
-  max-height: 115; }
+  min-height: 115; }
+
+ModDockUi {
+  min-width: 75;
+  min-height: 75; }
 
 ModItemUi {
   background-color: #DC4850;
@@ -189,8 +191,6 @@ ModItemUi {
   qproperty-borderWidth: 4;
   color: #27272B;
   font-family: DIN;
-  font-size: 20px;
-  margin: 20px;
-  padding: 20px; }
+  font-size: 14px; }
 
 /*# sourceMappingURL=style.css.map */
