--- a/ui/rsc-ui/style/style.sass
+++ b/ui/rsc-ui/style/style.sass
@@ -213,10 +213,10 @@ ModDial
   qproperty-arcColor: $black
   qproperty-arcWidth: 3
   qproperty-arcPadding: 4
-  qproperty-valueShown: false
+  qproperty-valueShown: true
   qproperty-displayedArcColor: $white
-  min-width: 115
-  min-height: 115
+  min-width: 120
+  min-height: 120
 
 ModDockUi
 
